--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 				</div>
 				<div class="col-lg-6">
 					<div class="wel-nots">
-						<p>Bienvenido a Geriatria</p>
+						<p>Bienvenido: A TÚ MÉDICO</p>
 					</div>
 					<div class="right-top">
 						<ul>
