--- a/index.html
+++ b/index.html
@@ -138,16 +138,11 @@
               data-duration="1500"
               style="background-image: url(images/slider-01.jpg)"
             >
-              <!-- <div class="lbox-caption pogoSlider-slide-element">
+              <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
                   <h1>BIENVENIDO A TÚ MÉDICO</h1>
-                  <p>
-                    Fusce convallis ante id purus sagittis malesuada. Sed erat
-                    ipsum
-                  </p>
-                  <a href="#" class="btn">Contacto</a>
                 </div>
-              </div> -->
+              </div>
             </div>
             <div
               class="pogoSlider-slide"
@@ -155,16 +150,11 @@
               data-duration="1500"
               style="background-image: url(images/slider-02.jpg)"
             >
-              <!-- <div class="lbox-caption pogoSlider-slide-element">
+              <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
-                  <h1>Somos expertos en adultos mayores</h1>
-                  <p>
-                    Fusce convallis ante id purus sagittis malesuada. Sed erat
-                    ipsum
-                  </p>
-                  <a href="#appointment" class="btn">Cita</a>
+                  <h1>BIENVENIDO A TÚ MÉDICO</h1>
                 </div>
-              </div> -->
+              </div>
             </div>
             <div
               class="pogoSlider-slide"
@@ -172,16 +162,11 @@
               data-duration="1500"
               style="background-image: url(images/slider-03.jpg)"
             >
-              <!-- <div class="lbox-caption pogoSlider-slide-element">
+              <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
-                  <h1>Welcome to Health Lab</h1>
-                  <p>
-                    Fusce convallis ante id purus sagittis malesuada. Sed erat
-                    ipsum
-                  </p>
-                  <a href="#" class="btn">Contacto</a>
+                  <h1>BIENVENIDO A TÚ MÉDICO</h1>
                 </div>
-              </div> -->
+              </div>
             </div>
           </div>
           <!-- .pogoSlider -->
@@ -197,8 +182,8 @@
           <div class="row">
             <div class="col-lg-12">
               <div class="title-box">
-                <h2>Nosotros</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                <h2>BIENVENIDO A TÚ MÉDICO</h2>
+                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p> -->
               </div>
             </div>
           </div>
@@ -206,24 +191,23 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="row align-items-center about-main-info">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                  <h2>Bienvenido a Geriatria</h2>
+                  <h2>Objetivo Principal</h2>
                   <p>
-                    Fusce convallis ante id purus sagittis malesuada. Sed erat
-                    ipsum, suscipit sit amet auctor quis, vehicula ut leo.
-                    Maecenas felis nulla, tincidunt ac blandit a, consectetur
-                    quis elit. Nulla ut magna eu purus cursus sagittis. Praesent
-                    fermentum tincidunt varius. Proin sit amet tempus magna.
-                    Fusce pellentesque vulputate urna.
+                    Mi objetivo profesional es el aplicar mis conocimientos y
+                    habilidades en beneficio de la población, brindando calidad
+                    y calidez en la atención medica, siendo ética y profesional
+                    con valores para desempeñar mi trabajo de la mejor manera
+                    posible; actualizándome para un crecimiento profesional y
+                    personal.
                   </p>
                   <p>
-                    Fusce convallis ante id purus sagittis malesuada. Sed erat
-                    ipsum, suscipit sit amet auctor quis, vehicula ut leo.
-                    Maecenas felis nulla, tincidunt ac blandit a, consectetur
-                    quis elit. Nulla ut magna eu purus cursus sagittis. Praesent
-                    fermentum tincidunt varius. Proin sit amet tempus magna.
-                    Fusce pellentesque vulputate urna.
+                    La <span style="color:gray">Geriatría</span> es la especialidad de la medicina dedicada al
+                    estudio, prevención, diagnóstico, tratamiento y
+                    rehabilitación de las enfermedades en los <span style="color:gray">adultos mayores</span>,
+                    así como en la prevención primaria y detección de
+                    enfermedades crónico degenerativas.
                   </p>
-                  <a href="#" class="new-btn-d br-2">Read More</a>
+                  <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12">
                   <div class="about-m">
