--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
               data-duration="1500"
               style="background-image: url(images/slider-01.jpg)"
             >
-              <div class="lbox-caption pogoSlider-slide-element">
+              <!-- <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
                   <h1>BIENVENIDO A TÚ MÉDICO</h1>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div
               class="pogoSlider-slide"
@@ -150,11 +150,11 @@
               data-duration="1500"
               style="background-image: url(images/slider-02.jpg)"
             >
-              <div class="lbox-caption pogoSlider-slide-element">
+              <!-- <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
                   <h1>BIENVENIDO A TÚ MÉDICO</h1>
                 </div>
-              </div>
+              </div> -->
             </div>
             <div
               class="pogoSlider-slide"
@@ -162,11 +162,11 @@
               data-duration="1500"
               style="background-image: url(images/slider-03.jpg)"
             >
-              <div class="lbox-caption pogoSlider-slide-element">
+              <!-- <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
                   <h1>BIENVENIDO A TÚ MÉDICO</h1>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
           <!-- .pogoSlider -->
@@ -201,9 +201,9 @@
                     personal.
                   </p>
                   <p>
-                    La <span style="color:gray">Geriatría</span> es la especialidad de la medicina dedicada al
+                    La <span font size= 5 style="color:black">Geriatría</span> es la especialidad de la medicina dedicada al
                     estudio, prevención, diagnóstico, tratamiento y
-                    rehabilitación de las enfermedades en los <span style="color:gray">adultos mayores</span>,
+                    rehabilitación de las enfermedades en los <span font size= 5 style="color:black">adultos mayores</span>,
                     así como en la prevención primaria y detección de
                     enfermedades crónico degenerativas.
                   </p>
