--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta name="author" content="" />
 
     <!-- Site Icons -->
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
     <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
 
     <!-- Bootstrap CSS -->
@@ -92,7 +92,7 @@
       <nav class="navbar header-nav navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="images/logo.png" alt="image"
+            ><img src="images/Logo.png" alt="image"
           /></a>
           <button
             class="navbar-toggler"
