--- a/index.html
+++ b/index.html
@@ -92,7 +92,8 @@
       <nav class="navbar header-nav navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html"
-            ><img src="images/Logo.png" alt="image"
+      <a href="index.html" class="logo me-auto"><img src="images/logo.png" alt="" c:\Users\AALVA\Pictures\favicon.png /></a>
+            ><img src="images/Logo.png" alt="image" class="img-fluid"
           /></a>
           <button
             class="navbar-toggler"
