--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
     <div id="chat" class="chat">
       <div class="chat-cabecera">
         <div class="chat-cabecera-avatar">
-          <img src="img/favicon.png" alt="" class="img-fluid logo me-auto" />
+          <img src="images/favicon.png" alt="" class="img-fluid logo me-auto" />
         </div>
         <div class="chat-cabecera-texto">
           <div class="chat-cabecera-texto-nombre">Dra. Patricia Geriatra</div>
