--- a/Citas.html
+++ b/Citas.html
@@ -8,6 +8,16 @@
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Dra. Patricia Geriatra</title>
+
+    <!-- Site Metas -->
+    <title>Dra. Patricia Geriatra &amp; Medico Playa</title>
+    <meta name="keywords" content="" />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
+
+    <!-- Site Icons -->
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon" />
+    <link rel="apple-touch-icon" href="images/apple-touch-icon.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -44,8 +54,9 @@
       <input id="hora" type="time" class="formulario__input" />
 
       <label for="consulta" class="formulario__label"
-        >Motivo de consulta:</label>
-        <input
+        >Motivo de consulta:</label
+      >
+      <input
         id="consulta"
         type="text"
         class="formulario__input"
