--- a/Citas.html
+++ b/Citas.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <form action="" class="formulario">
-      <img href="index.html" src="images/Logo.png" class="imgLogo" />
+      <img src="images/Logo.png" class="imgLogo" />
 
       <h1 class="formulario__titulo">Dra. Patricia Geriatra</h1>
       <h3 class="formulario__subtitulo">Agenda tu cita</h3>
