--- a/index.html
+++ b/index.html
@@ -243,11 +243,10 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Servicios</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Brindar consulta Geriátrica y consulta general con calidad y calidez.</p>
             </div>
           </div>
         </div>
-
         <div class="row">
           <div class="col-lg-12">
             <div class="owl-carousel owl-theme">
@@ -256,12 +255,11 @@
                   <div class="service-icon">
                     <i class="fa fa-h-square" aria-hidden="true"></i>
                   </div>
-                  <h3 class="title">Lorem ipsum dolor</h3>
-                  <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Accusantium consequuntur.
-                  </p>
-                  <a href="#" class="new-btn-d br-2">Read More</a>
+                  <h3 class="title">Atención de consulta general</h3>
+                  <p class="description">Diabetes Mellitus</p>
+                  <p class="description">Hipertensión</p>
+                  <p class="description">Manejo de enfermedades infecciones respiratoria, urinarias, Gastrointestinales, etc.</p>
+                  <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
               </div>
               <div class="item">
@@ -269,7 +267,7 @@
                   <div class="service-icon">
                     <i class="fa fa-heart" aria-hidden="true"></i>
                   </div>
-                  <h3 class="title">Lorem ipsum dolor</h3>
+                  <h3 class="title">Atención del adulto mayor</h3>
                   <p class="description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Accusantium consequuntur.
