--- a/index.html
+++ b/index.html
@@ -243,6 +243,10 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Servicios</h2>
+              <p>
+                Brindar consulta Geriátrica y consulta general con calidad y
+                calidez.
+              </p>
               <p>Brindar consulta Geriátrica y consulta general con calidad y calidez.</p>
             </div>
           </div>
@@ -256,6 +260,14 @@
                     <i class="fa fa-h-square" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Atención de consulta general</h3>
+                  <p class="description">• Diabetes Mellitus</p>
+                  <p class="description">• Hipertensión</p>
+                  <p class="description">
+                    • Manejo de enfermedades infecciones respiratoria,
+                    urinarias, Gastrointestinales, etc.
+                  </p>
+                  <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
+                  <h3 class="title">Atención de consulta general</h3>
                   <p class="description">Diabetes Mellitus</p>
                   <p class="description">Hipertensión</p>
                   <p class="description">Manejo de enfermedades infecciones respiratoria, urinarias, Gastrointestinales, etc.</p>
@@ -268,11 +280,17 @@
                     <i class="fa fa-heart" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Atención del adulto mayor</h3>
+                  <p class="description">• Transtornos cognitivos</p>
+                  <p class="description">• Envejecimiento saludable</p>
+                  <p class="description">• Artropatias</p>
+                  <p class="description">• Tratamientos paliativos</p>
+                  <p class="description">• Transtornos respiratorios</p>
+                  <p class="description">• Síndrome de caídas</p>
+                  <h3 class="title">Atención del adulto mayor</h3>
                   <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Accusantium consequuntur.
+                    • Enfermedades Crónico Degenerativas
                   </p>
-                  <a href="#" class="new-btn-d br-2">Read More</a>
+                  <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
               </div>
               <div class="item">
@@ -280,12 +298,12 @@
                   <div class="service-icon">
                     <i class="fa fa-hospital-o" aria-hidden="true"></i>
                   </div>
-                  <h3 class="title">Lorem ipsum dolor</h3>
+                  <h3 class="title">Aplicación de Botox</h3>
                   <p class="description">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit.
                     Accusantium consequuntur.
                   </p>
-                  <a href="#" class="new-btn-d br-2">Read More</a>
+                  <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
               </div>
               <div class="item">
