--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Citas</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>Llena este pequeño formulario para agendar tu cita.</p>
             </div>
           </div>
         </div>
@@ -392,7 +392,7 @@
           <div class="col-lg-6 col-md-6">
             <div class="well-block">
               <div class="well-title">
-                <h2>Reserva una Cita</h2>
+                <h2>Agendar Cita</h2>
               </div>
               <form>
                 <!-- Form start -->
@@ -404,7 +404,7 @@
                         id="name"
                         name="name"
                         type="text"
-                        placeholder="Name"
+                        placeholder="Nombre"
                         class="form-control input-md"
                       />
                     </div>
@@ -417,7 +417,7 @@
                         id="email"
                         name="email"
                         type="text"
-                        placeholder="E-Mail"
+                        placeholder="Correo"
                         class="form-control input-md"
                       />
                     </div>
@@ -426,13 +426,13 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label class="control-label" for="date"
-                        >Preferred Date</label
+                        >Fecha</label
                       >
                       <input
                         id="date"
                         name="date"
                         type="text"
-                        placeholder="Preferred Date"
+                        placeholder="Fecha"
                         class="form-control input-md"
                       />
                     </div>
@@ -441,20 +441,51 @@
                   <div class="col-md-6">
                     <div class="form-group">
                       <label class="control-label" for="time"
-                        >Preferred Time</label
+                        >Hora</label
                       >
                       <select id="time" name="time" class="form-control">
-                        <option value="8:00 to 9:00">8:00 to 9:00</option>
-                        <option value="9:00 to 10:00">9:00 to 10:00</option>
-                        <option value="10:00 to 1:00">10:00 to 1:00</option>
+                        <option value="8:00">8:00</option>
+                        <option value="8:30">8:30</option>
+                        <option value="9:00">9:00</option>
+                        <option value="9:30">9:30</option>
+                        <option value="10:00">10:00</option>
+                        <option value="10:30">10:30</option>
+                        <option value="11:00">11:00</option>
+                        <option value="11:30">11:30</option>
+                        <option value="12:00">12:00</option>
+                        <option value="12:30">12:30</option>
+                        <option value="13:00">13:00</option>
+                        <option value="13:30">13:30</option>
+                        <option value="14:00">14:00</option>
+                        <option value="14:30">14:30</option>
+                        <option value="15:00">15:00</option>
+                        <option value="15:30">15:30</option>
+                        <option value="16:00">10:00</option>
+                        <option value="16:30">10:30</option>
+                        <option value="17:00">11:00</option>
+                        <option value="17:30">11:30</option>
+                        <option value="18:00">12:00</option>
+                        <option value="18:30">12:30</option>
+                        <option value="19:00">13:00</option>
+                        <option value="19:30">13:30</option>
                       </select>
                     </div>
                   </div>
                   <!-- Select Basic -->
                   <div class="col-md-12">
                     <div class="form-group">
+                      <label class="control-label" for="name">Motivo de consulta</label>
+                      <input
+                        id="name"
+                        name="name"
+                        type="text"
+                        placeholder="Motivo de consulta"
+                        class="form-control"
+                      />
+                    </div>
+                    <!-- <div class="form-group">
                       <label class="control-label" for="appointmentfor"
-                        >Department</label
+                        >Motivo de consulta</label
                       >
                       <select
                         id="appointmentfor"
@@ -470,7 +501,7 @@
                         <option value="Anesthesiology">Anesthesiology</option>
                         <option value="Ayurvedic">Ayurvedic</option>
                       </select>
-                    </div>
+                    </div> -->
                   </div>
                   <!-- Button -->
                   <div class="col-md-12">
@@ -480,7 +511,7 @@
                         name="singlebutton"
                         class="new-btn-d br-2"
                       >
-                        Make An Appointment
+                        Haga una Cita
                       </button>
                     </div>
                   </div>
@@ -492,11 +523,11 @@
           <div class="col-lg-6 col-md-6">
             <div class="well-block">
               <div class="well-title">
-                <h2>Why Appointment with Us</h2>
+                <h2>¿Por qué hacer una cita con nosotros?</h2>
               </div>
               <div class="feature-block">
                 <div class="feature feature-blurb-text">
-                  <h4 class="feature-title">24/7 Hours Available</h4>
+                  <h4 class="feature-title">Disponible 24 horas al día, 7 días a la semana</h4>
                   <div class="feature-content">
                     <p>
                       Integer nec nisi sed mi hendrerit mattis. Vestibulum mi
@@ -506,7 +537,7 @@
                   </div>
                 </div>
                 <div class="feature feature-blurb-text">
-                  <h4 class="feature-title">Experienced Staff Available</h4>
+                  <h4 class="feature-title">Personal experimentado disponible</h4>
                   <div class="feature-content">
                     <p>
                       Aliquam sit amet mi eu libero fermentum bibendum pulvinar
@@ -515,7 +546,7 @@
                   </div>
                 </div>
                 <div class="feature feature-blurb-text">
-                  <h4 class="feature-title">Low Price & Fees</h4>
+                  <h4 class="feature-title">Precios bajos y tarifas</h4>
                   <div class="feature-content">
                     <p>
                       Praesent eu sollicitudin nunc. Cras malesuada vel nisi
@@ -778,7 +809,7 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Contacto</h2>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+              <p>El paciente es muy importante.</p>
             </div>
           </div>
         </div>
@@ -883,8 +914,8 @@
                 </div>
                 <div class="media-body dit-right">
                   <h4>Correo</h4>
-                  <a href="#">demoinfo@gmail.com</a><br />
-                  <a href="#">demoinfo@gmail.com</a>
+                  <a href="#">patricia_isabel22@msn.com </a><br />
+                  <a href="#">drapatricia@medicoplayageriatra.com</a>
                 </div>
               </div>
               <div class="media cont-line">
@@ -892,9 +923,9 @@
                   <i class="fa fa-volume-control-phone" aria-hidden="true"></i>
                 </div>
                 <div class="media-body dit-right">
-                  <h4>Numero Telefonico</h4>
-                  <a href="#">12345 67890</a><br />
-                  <a href="#">12345 67890</a>
+                  <h4>Telefonos</h4>
+                  <a href="#">22 2359 2373</a><br />
+                  <a href="#">98 4319 0369</a>
                 </div>
               </div>
             </div>
