--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
               fill="white"
             />
           </svg>
-          Empezar chat
+          Empezar Chat
         </a>
       </div>
     </div>
