--- a/index.html
+++ b/index.html
@@ -970,6 +970,11 @@
               <a href="#">Dra. Patricia Geriatria</a> Design By :
               <a href="#">AALVATECHNOLOGY</a>
             </p>
+            <p class="footer-company-name">
+              All Rights Reserved. &copy; 2024
+              <a href="#">Dra. Patricia Geriatria</a> Design By :
+              <a href="#">AALVATECHNOLOGY</a>
+            </p>
           </div>
         </div>
       </div>
