--- a/index.html
+++ b/index.html
@@ -971,9 +971,10 @@
               <a href="#">AALVATECHNOLOGY</a>
             </p>
             <p class="footer-company-name">
-              All Rights Reserved. &copy; 2024
-              <a href="#">Dra. Patricia Geriatria</a> Design By :
-              <a href="#">AALVATECHNOLOGY</a>
+              Médico, Cirujano y Partero Ced. Profecional.
+              <a href="#" style="color: #00548B">08789567</a> Médico Geriatra Ced Prof.
+              <a href="#" style="color: #00548B">11652453</a> Maestra en Administración de Instituciones de Salud Ced. Prof.
+              <a href="#" style="color: #00548B">13921433</a>
             </p>
           </div>
         </div>
