--- a/index.html
+++ b/index.html
@@ -971,10 +971,10 @@
               <a href="#">AALVATECHNOLOGY</a>
             </p>
             <p class="footer-company-name">
-              Médico, Cirujano y Partero Ced. Profecional.
-              <a href="#" style="color: #00548B">08789567</a> Médico Geriatra Ced Prof.
-              <a href="#" style="color: #00548B">11652453</a> Maestra en Administración de Instituciones de Salud Ced. Prof.
-              <a href="#" style="color: #00548B">13921433</a>
+              Médico, Cirujano y Partero Ced. Prof.
+              <a href="#" style="color: black">08789567</a> Médico Geriatra Ced Prof.
+              <a href="#" style="color: black">11652453</a> Maestra en Administración de Instituciones de Salud Ced. Prof.
+              <a href="#" style="color: black">13921433</a>
             </p>
           </div>
         </div>
