--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
     <!-- End Gallery -->
 
     <!-- Start Team -->
-    <!-- <div id="team" class="team-box">
+    <div id="team" class="team-box">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-12">
@@ -737,7 +737,7 @@
             </div>
 			
 		</div>
-	</div> -->
+	</div>
     <!-- End Team -->
 
     <!-- Start Blog -->
