--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         <div class="container">
           <a class="navbar-brand" href="index.html"
             ><img src="images/Logo.png" alt="image" class="img-fluid"
-          /></a>
+          />Dra. Patricia Isabel Flores Serrano</a>
           <button
             class="navbar-toggler"
             type="button"
@@ -136,7 +136,7 @@
               class="pogoSlider-slide"
               data-transition="fade"
               data-duration="1500"
-              style="background-image: url(images/slider-01.jpg)"
+              style="background-image: url(images/slider-02.jpg)"
             >
               <!-- <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
@@ -160,7 +160,7 @@
               class="pogoSlider-slide"
               data-transition="fade"
               data-duration="1500"
-              style="background-image: url(images/slider-03.jpg)"
+              style="background-image: url(images/slider-02.jpg)"
             >
               <!-- <div class="lbox-caption pogoSlider-slide-element">
                 <div class="lbox-details">
