--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12">
               <div class="row align-items-center about-main-info">
                 <div class="col-lg-6 col-md-6 col-sm-12">
-                  <h2>Objetivo Principal</h2>
+                  <h2>Objetivo Profesional</h2>
                   <p>
                     Mi objetivo profesional es el aplicar mis conocimientos y
                     habilidades en beneficio de la población, brindando calidad
