--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                 <div class="col-lg-6 col-md-6 col-sm-12">
                   <h2>Objetivo Profesional</h2>
                   <p>
-                    Mi objetivo profesional es el aplicar mis conocimientos y
+                    Mi objetivo principal es el aplicar mis conocimientos y
                     habilidades en beneficio de la población, brindando calidad
                     y calidez en la atención medica, siendo ética y profesional
                     con valores para desempeñar mi trabajo de la mejor manera
@@ -241,7 +241,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="title-box">
+            <div class="">
+              <!-- <div class="title-box"> -->
               <h2>Servicios</h2>
               <p>Brindar consulta Geriátrica y consulta general con calidad y calidez.</p>
             </div>
