--- a/index.html
+++ b/index.html
@@ -241,8 +241,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
-            <div class="">
-              <!-- <div class="title-box"> -->
+              <div class="title-box1">
               <h2>Servicios</h2>
               <p>Brindar consulta Geriátrica y consulta general con calidad y calidez.</p>
             </div>
