--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
           <div class="col-lg-12">
               <div class="title-box1">
               <h2>Servicios</h2>
-              <p style="color: black;">Brindar consulta Geriátrica y consulta general con calidad y calidez.</p>
+              <p style="color: black; font-weight: bold">Brindar consulta Geriátrica y consulta general con calidad y calidez.</p>
             </div>
           </div>
         </div>
