--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                         <img src="images/about-img-01.jpg" alt="" />
                       </li>
                       <li>
-                        <img src="images/about-img-02.jpg" alt="" />
+                        <img src="images/about-img-01.jpg" alt="" />
                       </li>
                       <!-- <li>
                         <img src="images/about-img-03.jpg" alt="" />
@@ -244,7 +244,7 @@
           <div class="col-lg-12">
             <div class="title-box1">
               <h2>Servicios</h2>
-              <p style="color: black; font-weight: bold">
+              <p style="font-weight: bold; color: black;">
                 Brindar consulta Geriátrica y consulta general con calidad y
                 calidez.
               </p>
@@ -260,9 +260,9 @@
                     <i class="fa fa-h-square" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Atención de consulta general</h3>
-                  <p class="description">• Diabetes Mellitus</p>
-                  <p class="description">• Hipertensión</p>
-                  <p class="description">
+                  <p style="font-weight: bold" class="description">• Diabetes Mellitus</p>
+                  <p style="font-weight: bold" class="description">• Hipertensión</p>
+                  <p style="font-weight: bold" class="description">
                     • infecciosas: respiratorias, urinarias ,
                     Gastrointestinales, ETS, etc.
                   </p>
