--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="our-team">
               <div class="pic">
-                <img src="images/img-1.jpg" alt="" />
+                <img src="images/img-1.jpg" alt="centered image" />
               </div>
               <!-- <div class="team-content">
                             <h3 class="title">Williamson</h3>
