--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
           <div class="col-lg-12">
             <div class="title-box1">
               <h2>Servicios</h2>
-              <p style="font-weight: bold; color: black;">
+              <p style="font-weight: bold; color: black">
                 Brindar consulta Geriátrica y consulta general con calidad y
                 calidez.
               </p>
@@ -260,8 +260,12 @@
                     <i class="fa fa-h-square" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Atención de consulta general</h3>
-                  <p style="font-weight: bold" class="description">• Diabetes Mellitus</p>
-                  <p style="font-weight: bold" class="description">• Hipertensión</p>
+                  <p style="font-weight: bold" class="description">
+                    • Diabetes Mellitus
+                  </p>
+                  <p style="font-weight: bold" class="description">
+                    • Hipertensión
+                  </p>
                   <p style="font-weight: bold" class="description">
                     • infecciosas: respiratorias, urinarias ,
                     Gastrointestinales, ETS, etc.
@@ -274,12 +278,24 @@
                     <i class="fa fa-heart" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Atención del adulto mayor</h3>
-                  <p style="font-weight: bold" class="description">• Transtornos cognitivos</p>
-                  <p style="font-weight: bold" class="description">• Envejecimiento saludable</p>
-                  <p style="font-weight: bold" class="description">• Artropatias</p>
-                  <p style="font-weight: bold" class="description">• Osteoporosis</p>
-                  <p style="font-weight: bold" class="description">• Transtornos respiratorios</p>
-                  <p style="font-weight: bold" class="description">• Síndrome de caídas</p>
+                  <p style="font-weight: bold" class="description">
+                    • Transtornos cognitivos
+                  </p>
+                  <p style="font-weight: bold" class="description">
+                    • Envejecimiento saludable
+                  </p>
+                  <p style="font-weight: bold" class="description">
+                    • Artropatias
+                  </p>
+                  <p style="font-weight: bold" class="description">
+                    • Osteoporosis
+                  </p>
+                  <p style="font-weight: bold" class="description">
+                    • Transtornos respiratorios
+                  </p>
+                  <p style="font-weight: bold" class="description">
+                    • Síndrome de caídas
+                  </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
               </div>
@@ -289,14 +305,13 @@
                     <i class="fa fa-hospital-o" aria-hidden="true"></i>
                   </div>
                   <h3 class="title">Aplicación de Botox</h3>
-                  <p class="description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                    Accusantium consequuntur.
+                  <p style="font-weight: bold" class="description">
+                    • En tercio Superior.
                   </p>
                   <!-- <a href="#" class="new-btn-d br-2">Read More</a> -->
                 </div>
               </div>
-              <div class="item">
+              <!-- <div class="item">
                 <div class="serviceBox">
                   <div class="service-icon">
                     <i class="fa fa-stethoscope" aria-hidden="true"></i>
@@ -308,8 +323,8 @@
                   </p>
                   <a href="#" class="new-btn-d br-2">Read More</a>
                 </div>
-              </div>
-              <div class="item">
+              </div> -->
+              <!-- <div class="item">
                 <div class="serviceBox">
                   <div class="service-icon">
                     <i class="fa fa-wheelchair" aria-hidden="true"></i>
@@ -321,8 +336,8 @@
                   </p>
                   <a href="#" class="new-btn-d br-2">Read More</a>
                 </div>
-              </div>
-              <div class="item">
+              </div> -->
+              <!-- <div class="item">
                 <div class="serviceBox">
                   <div class="service-icon">
                     <i class="fa fa-plus-square" aria-hidden="true"></i>
@@ -334,8 +349,8 @@
                   </p>
                   <a href="#" class="new-btn-d br-2">Read More</a>
                 </div>
-              </div>
-              <div class="item">
+              </div> -->
+              <!-- <div class="item">
                 <div class="serviceBox">
                   <div class="service-icon">
                     <i class="fa fa-medkit" aria-hidden="true"></i>
@@ -347,8 +362,8 @@
                   </p>
                   <a href="#" class="new-btn-d br-2">Read More</a>
                 </div>
-              </div>
-              <div class="item">
+              </div> -->
+              <!-- <div class="item">
                 <div class="serviceBox">
                   <div class="service-icon">
                     <i class="fa fa-user-md" aria-hidden="true"></i>
@@ -360,8 +375,8 @@
                   </p>
                   <a href="#" class="new-btn-d br-2">Read More</a>
                 </div>
-              </div>
-              <div class="item">
+              </div> -->
+              <!-- <div class="item">
                 <div class="serviceBox">
                   <div class="service-icon">
                     <i class="fa fa-ambulance" aria-hidden="true"></i>
@@ -373,7 +388,7 @@
                   </p>
                   <a href="#" class="new-btn-d br-2">Read More</a>
                 </div>
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
@@ -463,11 +478,6 @@
                         <option value="16:00">16:00</option>
                         <option value="16:30">16:30</option>
                         <option value="17:00">17:00</option>
-                        <option value="17:30">17:30</option>
-                        <option value="18:00">18:00</option>
-                        <option value="18:30">18:30</option>
-                        <option value="19:00">19:00</option>
-                        <option value="19:30">19:30</option>
                       </select>
                     </div>
                   </div>
@@ -530,34 +540,27 @@
               <div class="feature-block">
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Disponible 24 horas al día, 7 días a la semana
+                    Disponible los 7 días a la semana con los siguientes horarios
                   </h4>
                   <div class="feature-content">
-                    <p>
-                      Integer nec nisi sed mi hendrerit mattis. Vestibulum mi
-                      nunc, ultricies quis vehicula et, iaculis in
-                      magnestibulum.
-                    </p>
+                    <p>Lunes - Viernes de 9:00 am / 17:00 hrs</p>
+                    <p>Sabado - Domingo solo UERGENCIAS</p>
                   </div>
                 </div>
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Personal experimentado disponible
+                    Dirección de consultorio en Puebla: Cita programada
                   </h4>
                   <div class="feature-content">
-                    <p>
-                      Aliquam sit amet mi eu libero fermentum bibendum pulvinar
-                      a turpis. Vestibulum quis feugiat risus.
-                    </p>
+                    <p>Consultorio 1: Torre III “Hospital Betania” Consultorio 605 av. 20 Sur 705, Col. Azcárate</p>
+                    <p>Consultorio 2: Av. México No 3 San Hipólito Xochiltenango, Tep. Pue. CP. 75219</p>
                   </div>
                 </div>
                 <div class="feature feature-blurb-text">
-                  <h4 class="feature-title">Precios bajos y tarifas</h4>
+                  <h4 class="feature-title">Consulta privada a domicilio en:</h4>
                   <div class="feature-content">
                     <p>
-                      Praesent eu sollicitudin nunc. Cras malesuada vel nisi
-                      consequat pretium. Integer auctor elementum nulla suscipit
-                      in.
+                      Playa del Carmen, Quintana Roo y colaboración como médico externo en Amerimed
                     </p>
                   </div>
                 </div>
