--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Citas</h2>
-              <p>Llena este pequeño formulario para agendar tu cita.</p>
+              <p style="font-weight: bold">Llena este pequeño formulario para agendar tu cita.</p>
             </div>
           </div>
         </div>
@@ -535,7 +535,7 @@
           <div class="col-lg-6 col-md-6">
             <div class="well-block">
               <div class="well-title">
-                <h2>¿Por qué hacer una cita con nosotros?</h2>
+                <!-- <h2>¿Por qué hacer una cita con nosotros?</h2> -->
               </div>
               <div class="feature-block">
                 <div class="feature feature-blurb-text">
