--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-12">
                       <div class="about-m">
-                        <ul id="pic">
+                        <ul id="banner">
                           <li>
                             <img src="images/Dra. Patricia.png" alt="" />
                           </li>
@@ -696,7 +696,7 @@
         <!-- End medico -->
 
     <!-- Start Team -->
-    <!-- <div id="team" class="team-box">
+    <div id="team" class="team-box">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
@@ -723,7 +723,7 @@
           </div>
         </div>
       </div>
-    </div> -->
+    </div>
     <!-- End Team -->
 
     <!-- Start Contact -->
