--- a/index.html
+++ b/index.html
@@ -655,46 +655,6 @@
 	</div> -->
     <!-- End Gallery -->
 
-        <!-- Start medico -->
-        <div id="about" class="about-box">
-          <div class="about-a1">
-            <div class="container">
-              <div class="row">
-                <div class="col-lg-12">
-                  <div class="title-box">
-                    <h2>Dra. Patricia Isabel Flores Serrano. Médico Geriatra</h2>
-                  </div>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-lg-12 col-md-12 col-sm-12">
-                  <div class="row align-items-center about-main-info">
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                      <h3>Médico Geriatra</h3>
-                      <p>Médico, Cirujano y Partero Ced. Prof. 08789567</p>
-                      <p>Médico Geriatra Ced Prof. 11652453</p>
-                      <p>
-                        Maestra en Administración de Instituciones de Salud Ced. Prof.
-                        13921433
-                      </p>
-                    </div>
-                    <div class="col-lg-6 col-md-6 col-sm-12">
-                      <div class="about-m">
-                        <ul id="banner">
-                          <li>
-                            <img src="images/Dra. Patricia.png" alt="" />
-                          </li>
-                        </ul>
-                      </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End medico -->
-
     <!-- Start Team -->
     <div id="team" class="team-box">
       <div class="container">
@@ -717,7 +677,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="our-team">
               <div class="pic">
-                <img src="images/Dra. Patricia.png" alt="centered image" />
+                <img class="centrar;" src="images/Dra. Patricia.png" alt="" margin-left ="auto" margin-right="auto" />
               </div>
             </div>
           </div>
