--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
           <div class="col-md-4 col-sm-6">
             <div class="our-team">
               <div class="pic">
-                <img class="centrar;" src="images/Dra. Patricia.png" alt="" margin-left ="auto" margin-right="auto" />
+                <img class="" src="images/Dra. Patricia.png" alt="" align="right" />
               </div>
             </div>
           </div>
