--- a/index.html
+++ b/index.html
@@ -400,7 +400,9 @@
           <div class="col-lg-12">
             <div class="title-box">
               <h2>Citas</h2>
-              <p style="font-weight: bold">Llena este pequeño formulario para agendar tu cita.</p>
+              <p style="font-weight: bold">
+                Llena este pequeño formulario para agendar tu cita.
+              </p>
             </div>
           </div>
         </div>
@@ -518,7 +520,8 @@
               <div class="feature-block">
                 <div class="feature feature-blurb-text">
                   <h4 class="feature-title">
-                    Disponible los 7 días a la semana con los siguientes horarios
+                    Disponible los 7 días a la semana con los siguientes
+                    horarios
                   </h4>
                   <div class="feature-content">
                     <p>Lunes - Viernes de 9:00 am / 17:00 hrs</p>
@@ -530,15 +533,24 @@
                     Dirección de consultorio en Puebla: Cita programada
                   </h4>
                   <div class="feature-content">
-                    <p>Consultorio 1: Torre III “Hospital Betania” Consultorio 605 av. 20 Sur 705, Col. Azcárate</p>
-                    <p>Consultorio 2: Av. México No 3 San Hipólito Xochiltenango, Tep. Pue. CP. 75219</p>
+                    <p>
+                      Consultorio 1: Torre III “Hospital Betania” Consultorio
+                      605 av. 20 Sur 705, Col. Azcárate
+                    </p>
+                    <p>
+                      Consultorio 2: Av. México No 3 San Hipólito Xochiltenango,
+                      Tep. Pue. CP. 75219
+                    </p>
                   </div>
                 </div>
                 <div class="feature feature-blurb-text">
-                  <h4 class="feature-title">Consulta privada a domicilio en:</h4>
+                  <h4 class="feature-title">
+                    Consulta privada a domicilio en:
+                  </h4>
                   <div class="feature-content">
                     <p>
-                      Playa del Carmen, Quintana Roo y colaboración como médico externo en Amerimed
+                      Playa del Carmen, Quintana Roo y colaboración como médico
+                      externo en Amerimed
                     </p>
                   </div>
                 </div>
@@ -676,9 +688,12 @@
         <div class="row">
           <div class="col-md-4 col-sm-6">
             <div class="our-team">
-              <div class="pic">
-                <img class="" src="images/Dra. Patricia.png" alt="" align="right" />
+              <div class="title-box">
+                <img src="images/Dra. Patricia.png" alt="" />
               </div>
+              <!-- <div class="pic">
+                <img class="" src="images/Dra. Patricia.png" alt="" align="right" />
+              </div> -->
             </div>
           </div>
         </div>
