--- a/index.html
+++ b/index.html
@@ -76,9 +76,22 @@
                     ><i class="fa fa-facebook" aria-hidden="true"></i
                   ></a>
                 </li>
-                <!-- <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
-							<li><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a></li> -->
+                <li>
+                  <di id="flags" class="flags">
+                    <div class="flgas_item ">
+                      <img src="images/idioma/mx.svg" alt="">
+                    </div>
+                  </di>
+                </li>
+                <!-- <li>
+                  <a href="#"><i class="" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="" aria-hidden="true"></i></a>
+                </li> -->
               </ul>
             </div>
           </div>
