--- a/index.html
+++ b/index.html
@@ -76,22 +76,22 @@
                     ><i class="fa fa-facebook" aria-hidden="true"></i
                   ></a>
                 </li>
-                <li>
+                <!-- <li>
                   <di id="flags" class="flags">
-                    <div class="flgas_item ">
-                      <img src="images/idioma/mx.svg" alt="">
+                    <div class="flgas_item">
+                      <img src="images/idioma/mx.svg" alt="" />
                     </div>
                   </di>
-                </li>
-                <!-- <li>
-                  <a href="#"><i class="" aria-hidden="true"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="" aria-hidden="true"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="" aria-hidden="true"></i></a>
                 </li> -->
+                <li>
+                  <img src="images/idioma/mx.svg" alt="" />
+                </li>
+                <li>
+                  <a href="#"><i class="" aria-hidden="true"></i></a>
+                </li>
+                <li>
+                  <a href="#"><i class="" aria-hidden="true"></i></a>
+                </li>
               </ul>
             </div>
           </div>
