--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
             <div class="wel-nots">
               <p>Bienvenido: A TÚ MÉDICO</p>
             </div>
+            <li>
+              <img src="images/idioma/mx.svg" alt="" />
+            </li>
             <div class="right-top">
               <ul>
                 <li>
@@ -76,21 +79,19 @@
                     ><i class="fa fa-facebook" aria-hidden="true"></i
                   ></a>
                 </li>
-                <!-- <li>
-                  <di id="flags" class="flags">
-                    <div class="flgas_item">
-                      <img src="images/idioma/mx.svg" alt="" />
-                    </div>
-                  </di>
-                </li> -->
                 <li>
-                  <img src="images/idioma/mx.svg" alt="" />
+                  <a
+                    href="https://www.facebook.com/profile.php?id=61556572522362"
+                    target="_blank"
+                    ><i class="fa fa-facebook" aria-hidden="true"></i
+                  ></a>
                 </li>
                 <li>
-                  <a href="#"><i class="" aria-hidden="true"></i></a>
-                </li>
-                <li>
-                  <a href="#"><i class="" aria-hidden="true"></i></a>
+                  <a
+                    href="https://www.facebook.com/profile.php?id=61556572522362"
+                    target="_blank"
+                    ><i class="fa fa-facebook" aria-hidden="true"></i
+                  ></a>
                 </li>
               </ul>
             </div>
