--- a/index.html
+++ b/index.html
@@ -67,25 +67,17 @@
             <div class="wel-nots">
               <p>Bienvenido: A TÚ MÉDICO</p>
             </div>
-            <li>
-              <img src="images/idioma/mx.svg" alt="" />
+            <li class="flags flags_img flags_item" data-lenguage="es">
+              <img src="images/idioma/mx.svg" alt=""/>
+            </li>
+            <li class="flags flags_img flags_item" data-lenguage="es">
+              <img src="images/idioma/us.svg" alt=""/>
+            </li>
+            <li class="flags flags_img flags_item" data-lenguage="es">
+              <img src="images/idioma/fr.svg" alt=""/>
             </li>
             <div class="right-top">
               <ul>
-                <li>
-                  <a
-                    href="https://www.facebook.com/profile.php?id=61556572522362"
-                    target="_blank"
-                    ><i class="fa fa-facebook" aria-hidden="true"></i
-                  ></a>
-                </li>
-                <li>
-                  <a
-                    href="https://www.facebook.com/profile.php?id=61556572522362"
-                    target="_blank"
-                    ><i class="fa fa-facebook" aria-hidden="true"></i
-                  ></a>
-                </li>
                 <li>
                   <a
                     href="https://www.facebook.com/profile.php?id=61556572522362"
