--- a/index.html
+++ b/index.html
@@ -67,14 +67,14 @@
             <div class="wel-nots">
               <p>Bienvenido: A TÚ MÉDICO</p>
             </div>
-            <li class="flags flags_img flags_item" data-lenguage="es">
-              <img src="images/idioma/mx.svg" alt=""/>
+            <li data-lenguage="mx">
+              <img class="flags flags_img flags_item" src="images/idioma/mx.svg" alt=""/>
             </li>
-            <li class="flags flags_img flags_item" data-lenguage="es">
-              <img src="images/idioma/us.svg" alt=""/>
+            <li data-lenguage="us">
+              <img class="flags flags_img flags_item" src="images/idioma/us.svg" alt=""/>
             </li>
-            <li class="flags flags_img flags_item" data-lenguage="es">
-              <img src="images/idioma/fr.svg" alt=""/>
+            <li data-lenguage="fr">
+              <img class="flags flags_img flags_item" src="images/idioma/fr.svg" alt=""/>
             </li>
             <div class="right-top">
               <ul>
