--- a/index.html
+++ b/index.html
@@ -61,34 +61,34 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
+              <div class="flags flags_img flags_item">
+                <li data-lenguage="mx">
+                  <img
+                    class="flags flags_img flags_item"
+                    src="images/idioma/mx.svg"
+                    alt=""
+                  />
+                </li>
+                <li data-lenguage="us">
+                  <img
+                    class="flags flags_img flags_item"
+                    src="images/idioma/us.svg"
+                    alt=""
+                  />
+                </li>
+                <li data-lenguage="fr">
+                  <img
+                    class="flags flags_img flags_item"
+                    src="images/idioma/fr.svg"
+                    alt=""
+                  />
+                </li>
+              </div>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="wel-nots">
               <p>Bienvenido: A TÚ MÉDICO</p>
-            </div>
-            <div class="align-items-center">
-              <li data-lenguage="mx">
-                <img
-                  class="flags flags_img flags_item"
-                  src="images/idioma/mx.svg"
-                  alt=""
-                />
-              </li>
-              <li data-lenguage="us">
-                <img
-                  class="flags flags_img flags_item"
-                  src="images/idioma/us.svg"
-                  alt=""
-                />
-              </li>
-              <li data-lenguage="fr">
-                <img
-                  class="flags flags_img flags_item"
-                  src="images/idioma/fr.svg"
-                  alt=""
-                />
-              </li>
             </div>
             <div class="right-top">
               <ul>
