--- a/index.html
+++ b/index.html
@@ -62,20 +62,23 @@
                 >
               </div>
               <div class="flags flags_img flags_item">
-                <li data-lenguage="mx">
+                <li lass="flags flags_img flags_item" data-lenguage="mx">
                   <img
+                    class="flags flags_img flags_item"
                     src="images/idioma/mx.svg"
                     alt=""
                   />
                 </li>
-                <li data-lenguage="us">
+                <li lass="flags flags_img flags_item" data-lenguage="us">
                   <img
+                    class="flags flags_img flags_item"
                     src="images/idioma/us.svg"
                     alt=""
                   />
                 </li>
-                <li data-lenguage="fr">
+                <li lass="flags flags_img flags_item" data-lenguage="fr">
                   <img
+                    class="flags flags_img flags_item"
                     src="images/idioma/fr.svg"
                     alt=""
                   />
