--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
                     alt=""
                   />
                 </li>
+              </div>
+              <div class="flags flags_img flags_item">
                 <li class="flags flags_img flags_item" data-lenguage="us">
                   <img
                     class="flags flags_img flags_item"
@@ -76,6 +78,8 @@
                     alt=""
                   />
                 </li>
+              </div>
+              <div class="flags flags_img flags_item">
                 <li class="flags flags_img flags_item" data-lenguage="fr">
                   <img
                     class="flags flags_img flags_item"
