--- a/index.html
+++ b/index.html
@@ -61,24 +61,21 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
-              <div class="flags flags_img flags_item">
-                <li class="flags flags_img flags_item" data-lenguage="mx">
+              <div class="flags flags_img flags_item mail-b">
+                <li data-lenguage="mx">
                   <img
-                    class="flags flags_img flags_item"
                     src="images/idioma/mx.svg"
                     alt=""
                   />
                 </li>
-                <li class="flags flags_img flags_item" data-lenguage="us">
+                <li data-lenguage="us">
                   <img
-                    class="flags flags_img flags_item"
                     src="images/idioma/us.svg"
                     alt=""
                   />
                 </li>
-                <li class="flags flags_img flags_item" data-lenguage="fr">
+                <li data-lenguage="fr">
                   <img
-                    class="flags flags_img flags_item"
                     src="images/idioma/fr.svg"
                     alt=""
                   />
