--- a/index.html
+++ b/index.html
@@ -81,6 +81,46 @@
                   />
                 </li>
               </div>
+              <div class="flags flags_img flags_item mail-b">
+                <li data-lenguage="mx">
+                  <img
+                    src="images/idioma/mx.svg"
+                    alt=""
+                  />
+                </li>
+                <li data-lenguage="us">
+                  <img
+                    src="images/idioma/us.svg"
+                    alt=""
+                  />
+                </li>
+                <li data-lenguage="fr">
+                  <img
+                    src="images/idioma/fr.svg"
+                    alt=""
+                  />
+                </li>
+              </div>
+              <div class="flags flags_img flags_item mail-b">
+                <li data-lenguage="mx">
+                  <img
+                    src="images/idioma/mx.svg"
+                    alt=""
+                  />
+                </li>
+                <li data-lenguage="us">
+                  <img
+                    src="images/idioma/us.svg"
+                    alt=""
+                  />
+                </li>
+                <li data-lenguage="fr">
+                  <img
+                    src="images/idioma/fr.svg"
+                    alt=""
+                  />
+                </li>
+              </div>
             </div>
           </div>
           <div class="col-lg-6">
