--- a/index.html
+++ b/index.html
@@ -61,7 +61,18 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
-              <div class="flags flags_img flags_item mail-b">
+              <div id="flags" class="flags">
+                <div class="flags_item" data_language="mx">
+                  <img src="images/idioma/mx.svg" alt="" />
+                </div>
+                <div class="flags_item" data_language="us">
+                  <img src="images/idioma/us.svg" alt="" />
+                </div>
+                <div class="flags_item" data_language="fr">
+                  <img src="images/idioma/fr.svg" alt="" />
+                </div>
+              </div>
+              <!-- <div class="flags flags_img flags_item mail-b">
                 <li data-lenguage="mx">
                   <img src="images/idioma/mx.svg" alt="" />
                 </li>
@@ -75,7 +86,7 @@
                 <li data-lenguage="fr">
                   <img src="images/idioma/fr.svg" alt="" />
                 </li>
-              </div>
+              </div> -->
             </div>
           </div>
           <div class="col-lg-6">
