--- a/index.html
+++ b/index.html
@@ -63,10 +63,12 @@
               </div>
               <div id="flags" class="flags">
                 <div class="flags_item" data_language="mx">
-                  <img src="images/idioma/mx.svg" alt="" />
+                  <img src="images/idioma/mx.svg" alt="" href="index.html"
+                  target="_blank"/>
                 </div>
                 <div class="flags_item" data_language="us">
-                  <img src="images/idioma/us.svg" alt="" />
+                  <img src="images/idioma/us.svg" alt="" href="us.html"
+                  target="_blank"/>
                 </div>
                 <div class="flags_item" data_language="fr">
                   <img src="images/idioma/fr.svg" alt="" />
