--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                   <img src="images/idioma/mx.svg" alt="" href="index.html"
                   target="_blank"/>
                 </div>
-                <div class="flags_item flags_img" href="index.html">
+                <div class="flags_item flags_img" href="us.html">
                   <img src="images/idioma/us.svg" alt="" href="us.html"
                   target="_blank"/>
                 </div>
