--- a/index.html
+++ b/index.html
@@ -63,12 +63,10 @@
               </div>
               <div id="flags" class="flags">
                 <div class="flags_item flags_img" href="index.html">
-                  <img src="images/idioma/mx.svg" alt="" href="index.html"
-                  target="_blank"/>
+                  <img src="images/idioma/mx.svg" alt="" href="index.html"/>
                 </div>
                 <div class="flags_item flags_img" href="us.html">
-                  <img src="images/idioma/us.svg" alt="" href="us.html"
-                  target="_blank"/>
+                  <img src="images/idioma/us.svg" alt="" href="us.html"/>
                 </div>
                 <div class="flags_item flags_img" data_language="fr">
                   <img src="images/idioma/fr.svg" alt="" />
