--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
                 >
               </div>
               <div id="flags" class="flags">
-                <div class="flags_item flags_img" href="index.html">
+                <div class="flags_item" href="index.html">
                   <img src="images/idioma/mx.svg" alt="" href="index.html"/>
                 </div>
-                <div class="flags_item flags_img" href="us.html">
+                <div class="flags_item" href="us.html">
                   <img src="images/idioma/us.svg" alt="" href="us.html"/>
                 </div>
                 <div class="flags_item flags_img" data_language="fr">
