--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
                 >
               </div>
               <div id="flags" class="flags">
+                <a class="navbar-brand" href="index.html"
+                ><img src="images/idioma/mx.svg" alt="image" class="img-fluid" /></a>
+                <a class="navbar-brand" href="us.html"
+                ><img src="images/idioma/us.svg" alt="image" class="img-fluid" /></a>
                 <div class="flags_item" href="index.html">
                   <img src="images/idioma/mx.svg" alt="" href="index.html"/>
                 </div>
