--- a/index.html
+++ b/index.html
@@ -62,11 +62,16 @@
                 >
               </div>
               <div id="flags" class="flags">
-                <a class="navbar-brand" href="index.html"
-                ><img src="images/idioma/mx.svg" alt="image" class="img-fluid" /></a>
-                <a class="navbar-brand" href="us.html"
-                ><img src="images/idioma/us.svg" alt="image" class="img-fluid" /></a>
-                <div class="flags_item" href="index.html">
+                <a class="flags" href="index.html">
+                  <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
+                </a>
+                <a class="flags" href="us.html">
+                  <img src="images/idioma/us.svg" alt="image" class="img-fluid" />
+                </a>
+                <a class="flags" href="fr.html">
+                  <img src="images/idioma/fr.svg" alt="image" class="img-fluid" />
+                </a>
+                <!-- <div class="flags_item" href="i.html">
                   <img src="images/idioma/mx.svg" alt="" href="index.html"/>
                 </div>
                 <div class="flags_item" href="us.html">
@@ -74,7 +79,7 @@
                 </div>
                 <div class="flags_item flags_img" data_language="fr">
                   <img src="images/idioma/fr.svg" alt="" />
-                </div>
+                </div> -->
               </div>
               <!-- <div class="flags flags_img flags_item mail-b">
                 <li data-lenguage="mx">
