--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                   patricia_isabel22@msn.com</a
                 >
               </div>
-              <div id="flags" class="flags">
+              <div id="" class="flags">
                 <a class="flags" href="index.html">
                   <img src="images/idioma/mx.svg" alt="image" class="img-fluid" />
                 </a>
